--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "splitpanes": "^3.1.5"
   },
   "devDependencies": {
+    "@types/splitpanes": "^2.2.6",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "sass-embedded": "^1.79.5",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
