--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wuxianx-fancyzones",
+  "packageManager": "pnpm@9.4.0",
   "private": true,
   "type": "module",
   "version": "0.0.0",
@@ -32,7 +33,8 @@
     "dev": "vitepress dev docs",
     "build": "vue-tsc -b && vite build",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:serve": "vitepress serve docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
     "splitpanes": "^3.1.5"
